Created database/routes for the chat

--- a/back-end/.env
+++ b/back-end/.env
@@ -3,4 +3,4 @@ NODE_ENV=development
 
 # Auth
 
-APP_SECRET=bootcampgobarbernode
+MONGO_URL=mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false
