--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,7 +10,13 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "http": "^0.0.1-security",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.19",
+    "socket.io": "^3.1.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
