--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "history": "4.6.3",
     "polished": "^4.1.1",
     "prop-types": "^15.7.2",
+    "querystring": "^0.2.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
@@ -20,6 +21,7 @@
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^3.1.2",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
