--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -22,6 +22,7 @@
     "react/forbid-prop-types": "off",
     "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "react/jsx-one-expression-per-line": "off",
+    "label-has-associated-control": "off",
     "global-require": "off",
     "no-param-reassign": "off",
     "no-underscore-dangle": "off",
