--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,19 +10,23 @@
     "@unform/web": "^2.1.6",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "date-fns": "^2.19.0",
     "history": "4.6.3",
     "polished": "^4.1.1",
     "prop-types": "^15.7.2",
     "querystring": "^0.2.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-datepicker": "^3.6.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.3",
     "socket.io-client": "^3.1.2",
     "styled-components": "^5.2.1",
+    "use-immer": "^0.4.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
